--- a/.github/workflows/gh-workflow-2.yaml
+++ b/.github/workflows/gh-workflow-2.yaml
@@ -1,42 +1,24 @@
-name: GHA Workflow
-
+name: learn-github-actions
+# on: [pull_request]
 on:
   push:
     branches:
       - "main"
-
 jobs:
-  build:
+  check-bats-version:
     runs-on: ubuntu-latest
     steps:
-      - name: compile
-        run: echo "compile started..."
-
-      - name: produce-binary
-        run: sleep 10
-
-      - name: push-binary
-        run: echo "binary pushing..."
-
-  test:
-    runs-on: ubuntu-latest
-    needs: [build]   # Depends on 'build' job
-    steps:
-      - name: Run tests
-        run: echo "tests running..."
-
-      - name: Collect test results
-        run: sleep 20
-
-      - name: Publish test results
-        run: echo "test results published..."
+      - uses: actions/checkout@v4
+      
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          
+      - name: "Install bats"
+        run: |
+          sleep 30
+          npm install -g bats
+        
+      - run: bats -v
 
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: [build, test]   # Depends on both 'build' and 'test' jobs
-    steps:
-      - name: prepare-deployment
-        run: sleep 15
-      - name: deploy app
-        run: echo "Deploying..."
