--- a/.cloudbees/workflows/workflow.yaml
+++ b/.cloudbees/workflows/workflow.yaml
@@ -2,11 +2,17 @@ apiVersion: automation.cloudbees.io/v1alpha1
 kind: workflow
 name: My workflow
 
+# on:
+#   workflow_dispatch:
+#   push:
+#     branches:
+#       - 'main'
+
+
 on:
-  workflow_dispatch:
   push:
-    branches:
-      - 'main'
+    tags:
+      - "v*"
 
 jobs:
   build:
