--- a/.cloudbees/workflows/caller-workflow.yaml
+++ b/.cloudbees/workflows/caller-workflow.yaml
@@ -9,6 +9,6 @@ on:
 
 jobs:
   invoke-reusable:
-    uses: ./workflows/reusable-workflow.yaml
+    uses: ./.cloudbees/workflows/reusable-workflow.yaml
     with:
       run-tests: true
