--- a/.cloudbees/workflows/reusable-wf2.yaml
+++ b/.cloudbees/workflows/reusable-wf2.yaml
@@ -10,38 +10,27 @@ on:
         required: false
         default: true
         type: boolean
-    secrets:
-      TOKEN:
-        required: true
 
 jobs:
   pick:
-    runs-on: ubuntu-latest
     steps:
-      - name: Checkout Code - pick
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ inputs.node-version }}
-
-      - name: Install Dependencies
+      - name: build-binary - pick
+        uses: docker://golang:1.20.3-alpine3.17
+        shell: sh
         run: |
-          echo "npm install"
-          sleep 5
+          echo "build application"
+          echo sleep 10
+
 
   drop:
     if: inputs.run-tests == true
-    runs-on: ubuntu-latest
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
-
-      - name: Run Tests - drop
+      - name: run tests - drop
+        uses: docker://golang:1.20.3-alpine3.17
+        shell: sh
         run: |
-          echo "run tests"
-          sleep 15
+          echo "running tests"
+          echo sleep 15
 
       - name: Upload Test Results
         run: echo "Uploaded results"
