--- a/.github/workflows/gh-workflow-2.yaml
+++ b/.github/workflows/gh-workflow-2.yaml
@@ -8,7 +8,20 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    steps:     
+    steps:
+      - uses: actions/checkout@v4
+      
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          
+      - name: "Install bats"
+        run: |
+          sleep 30
+          npm install -g bats
+        
+      - run: bats -v
+      
       - name: compile
         run: echo "compile started..."
 
@@ -30,7 +43,6 @@ jobs:
 
       - name: Publish test results
         run: echo "test results published.."
-
 
 
   deploy:
