--- a/.github/workflows/reusable-wf2.yaml
+++ b/.github/workflows/reusable-wf2.yaml
@@ -42,4 +42,4 @@ jobs:
           sleep 15
 
       - name: Upload Test Results
-        run: echo "Uploaded results""
+        run: echo "Uploaded results"
