--- a/.github/workflows/reusable-workflow.yaml
+++ b/.github/workflows/reusable-workflow.yaml
@@ -49,12 +49,12 @@ jobs:
       - name: Upload Test Results
         run: echo "Uploaded results"
 
-  # trigger-r2:
-  #   uses: ./.github/workflows/reusable-wf2.yaml
-  #   with:
-  #     run-tests: true
-  #   secrets:
-  #     TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  trigger-r2:
+    uses: ./.github/workflows/reusable-wf2.yaml
+    with:
+      run-tests: true
+    secrets:
+      TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 
       
