--- a/.github/workflows/gh-workflow-2.yaml
+++ b/.github/workflows/gh-workflow-2.yaml
@@ -6,8 +6,7 @@ on:
         - "main"
 
 jobs:
-  build:
-    name: "BuildName"
+  b-build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -32,10 +31,10 @@ jobs:
       - name: push-binary
         run: echo "binary pushing..."
 
-  test:
+  a-test:
     name: "TestName"
     runs-on: ubuntu-latest
-    needs: [build]   # Depends on 'build' job
+    needs: [b-build]   # Depends on 'build' job
     steps:
       - name: Run tests
         run: echo "tests running..."
@@ -49,7 +48,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs: [build, test]   # Depends on both 'build' and 'test' jobs
+    needs: [b-build, a-test]   # Depends on both 'build' and 'test' jobs
     steps:
       - name: prepare-deployment
         run: sleep 15
