--- a/.github/workflows/reusable-workflow.yaml
+++ b/.github/workflows/reusable-workflow.yaml
@@ -18,7 +18,7 @@ on:
         required: true
 
 jobs:
-  build-latest:
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
@@ -34,7 +34,7 @@ jobs:
           echo "npm install"
           sleep 25
 
-  test-latest:
+  test:
     if: inputs.run-tests == true
     runs-on: ubuntu-latest
     steps:
