--- a/.cloudbees/workflows/reusable-wf3.yaml
+++ b/.cloudbees/workflows/reusable-wf3.yaml
@@ -32,7 +32,7 @@ jobs:
           echo "running tests"
           echo sleep 15
 
-  trigger-r4:
-    uses: ./.cloudbees/workflows/reusable-wf4.yaml
-    with:
-      run-tests: true
+  # trigger-r4:
+  #   uses: ./.cloudbees/workflows/reusable-wf4.yaml
+  #   with:
+  #     run-tests: true
