--- a/.github/workflows/new-workflow.yaml
+++ b/.github/workflows/new-workflow.yaml
@@ -42,7 +42,7 @@ jobs:
         run: sleep 17
 
       - name: Publish test results
-        run: echo "test results published.."
+        run: echo "test results published..""
 
 
   deploy:
