--- a/.github/workflows/reusable-wf2.yaml
+++ b/.github/workflows/reusable-wf2.yaml
@@ -43,6 +43,7 @@ jobs:
         run: |
           echo "npm install"
           sleep 10
+          echo "completed""
 
   # trigger-r3:
   #   uses: ./.github/workflows/reusable-wf3.yaml
