--- a/.github/workflows/reusable-workflow.yaml
+++ b/.github/workflows/reusable-workflow.yaml
@@ -47,7 +47,7 @@ jobs:
           sleep 15
 
       - name: Upload Test Results
-        run: echo "Uploaded results""
+        run: echo "Uploaded results"
 
   # trigger-r2:
   #   uses: ./.github/workflows/reusable-wf2.yaml
