--- a/.github/workflows/build-artifact.yaml
+++ b/.github/workflows/build-artifact.yaml
@@ -11,8 +11,8 @@ jobs:
         uses: cloudbees-io-gha/register-build-artifact@v2
         id: go-action
         with:
-          name: "gha-artifact-test-1"
-          version: 1.0.0
+          name: "gha-exp6-artifact-1"
+          version: "1.0.0"
           url: "docker.io/calculi-corp/gha-action/gha-artifact-test-003:latest"
           digest: "sha256:a1a123ee08af5e43a7fea6c4cf9c25ccf269ee113168c19722f87876677c5cb5"
           type: "docker"
