--- a/.github/workflows/gh-pr-workflow.yaml
+++ b/.github/workflows/gh-pr-workflow.yaml
@@ -1,9 +1,7 @@
 name: GHA Workflow
 
 on:
-  push:
-    tags:
-      - "v*"
+  pull_request:
 
 jobs:
   build:
@@ -20,13 +18,12 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
-    needs: [build]   # Depends on 'build' job
     steps:
       - name: Run tests
         run: echo "tests running..."
 
       - name: Collect test results
-        run: sleep 20
+        run: sleep 10
 
       - name: Publish test results
         run: echo "test results published..."
