--- a/.github/workflows/schedule-caller-workflow.yaml
+++ b/.github/workflows/schedule-caller-workflow.yaml
@@ -1,8 +1,8 @@
 name: Schedule Caller Workflow
 
-on: 
-  schedule:
-     - cron: "*/5 * * * *"
+on: [pull_request]
+  # schedule:
+  #    - cron: "*/5 * * * *"
 
 jobs:
   reusable-1:
