--- a/.github/workflows/add-labels.yaml
+++ b/.github/workflows/add-labels.yaml
@@ -14,12 +14,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      
+
       - name: Run My Custom Go Action
         uses: ./
         id: go-action
         with:
           cloudbees-url: "https://api.saas-preprod.beescloud.com"
           artifact-id: "417011a8-c8fb-4906-bd02-591d51ca3e1a"
-          labels: "ready"
+          labels: "tested"
           operation: "ADD"
