--- a/.github/workflows/add-labels.yaml
+++ b/.github/workflows/add-labels.yaml
@@ -21,5 +21,5 @@ jobs:
         with:
           cloudbees-url: "https://api.saas-preprod.beescloud.com"
           artifact-id: "417011a8-c8fb-4906-bd02-591d51ca3e1a"
-          labels: "ready"
-          operation: "REMOVE"
+          labels: "verfied,ready"
+          operation: "REPLACE"
