--- a/.github/workflows/build-artifact.yaml
+++ b/.github/workflows/build-artifact.yaml
@@ -3,7 +3,7 @@ name: PREPROD - GHA Build Artifact Publish Workflow
 on:
   push:
     branches:
-      - "test"
+      - "main"
 
 permissions:
   id-token: write
@@ -17,7 +17,7 @@ jobs:
         uses: cloudbees-io-gha/register-build-artifact@v3
         id: go-action
         with:
-          name: "gha-exp6-artifact-1"
+          name: "gha-exp6-artifact-2"
           version: "1.0.2"
           url: "docker.io/curlimages/curl:8.12.1"
           digest: "sha256:94e9e444bcba979c2ea12e27ae39bee4cd10bc7041a472c4727a558e213744e6"
