--- a/.github/workflows/add-labels.yaml
+++ b/.github/workflows/add-labels.yaml
@@ -3,7 +3,7 @@ name: PREPROD - GHA Label artifact
 on:
   push:
     branches:
-      - "test"
+      - "main"
 
 permissions:
   id-token: write
@@ -20,6 +20,6 @@ jobs:
         id: go-action
         with:
           cloudbees-url: "https://api.saas-preprod.beescloud.com"
-          artifact-id: "417011a8-c8fb-4906-bd02-591d51ca3e1a"
+          artifact-id: "78f2705e-4421-4bc7-a62d-aa0acbcf7ddd"
           labels: "verified,feature"
-          operation: "REPLACE"
+          operation: "ADD"
