--- a/.github/workflows/add-labels.yaml
+++ b/.github/workflows/add-labels.yaml
@@ -3,7 +3,7 @@ name: PREPROD - GHA Label artifact
 on:
   push:
     branches:
-      - "test"
+      - "main"
 
 permissions:
   id-token: write
@@ -21,5 +21,5 @@ jobs:
         with:
           cloudbees-url: "https://api.saas-preprod.beescloud.com"
           artifact-id: "78f2705e-4421-4bc7-a62d-aa0acbcf7ddd"
-          labels: ""
+          labels: "new"
           operation: "REPLACE"
